# Certo-AMD-Hackathon

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_judge_votes.py  0003_agent_steps.py  0004_traces.py  0005_api_keys.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  api_keys.py  audits.py  auth.py  benchmarks.py  evaluations.py  router.py  trace.py  traces.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  security.py  seed.py  suite.py
backend/app/models/: __init__.py  agent.py  audit.py  base.py  benchmark.py  evaluation.py  skill.py  trace.py  user.py
backend/app/repositories/: agent.py  base.py  benchmark.py  evaluation.py  trace.py
backend/app/schemas/: agent.py  api_key.py  auth.py  benchmark.py  common.py  evaluation.py  trace.py
backend/app/services/: evaluation_service.py  trace_recorder.py  trace_scoring.py
backend/app/services/agent_runner/: agentic.py  runner.py
backend/app/services/audit/: __init__.py  detectors.py  fireworks.py  fixer.py  judges.py  probes.py  runner.py  sample_report.json  scoring.py  verdict.py
backend/app/services/compliance/: __init__.py  catalog.py
backend/app/services/email/: sender.py
backend/app/services/judge/: anthropic_judge.py  base.py  ensemble.py  prompts.py  secondary.py  vllm_judge.py
backend/app/workers/: settings.py  tasks.py
backend/scripts/: calibrate_judge.py  calibrate_trustscore.py  check_judge.py  compare_models.py  gen_sample_audit.py  import_gaia.py  import_swebench.py  migrate_local.py  probe_judge_injection.py  seed.py
backend/scripts/data/: judge_gold.jsonl  trust_gold.jsonl
backend/tests/: test_judge_ensemble.py  test_scoring.py
sdk/: pyproject.toml
sdk/certo/: __init__.py
(+58 files in other folders)
