[project]
name = "certo-sdk"
version = "0.1.0"
description = "Instrument any AI agent and stream its trajectory to Certo for evaluation."
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["certo"]
